--- a/master.scss
+++ b/master.scss
@@ -19,12 +19,12 @@ orange:#f28b02,
 dkorange: #945706,
 softbrown: #2c2d32,
 mutedOrange: #9a854e,
-softsand: #b38f59,
+softsand: #b3976e,
 dkgrey:#575757,
 dkgrey2:#868585,
 ltgrey:#bdbdbd,
 coral: coral,
-softred: #b64d3e,
+softred: #b0493a,
 offWhite: #d9d4c5,
 ivr:#e6d8cc,
 wh: #fff,
