--- a/scss/colors/colors.scss
+++ b/scss/colors/colors.scss
@@ -37,11 +37,11 @@ background-color: map-get($colors, softred);
 .softred {
 color: map-get($colors, softred);
 }
-.softBlue-bg {
-background-color: map-get($colors, softBlue);
+.softblue-bg {
+background-color: map-get($colors, softblue);
 }
-.softBlue {
-color: map-get($colors, softBlue);
+.softblue {
+color: map-get($colors, softblue);
 }
 .softwhite {
   color: map-get($colors, softwite);
