--- a/scss/grid/grid.scss
+++ b/scss/grid/grid.scss
@@ -14,40 +14,46 @@ background: linear-gradient(180deg, rgba(29, 30, 32, 1) 0%,rgba(23, 22, 31, 1) 1
   pre {
     font-family: map-get($fonts, Thin);
     div {
-      color: map-get($colors, softsand);
       margin: 1% auto;
       border-radius: 10px;
     }
   }
 }
 .softred-fr {
+  border-radius: 8px;
   padding: 1%;
   background-color: map-get($colors, softred);
 box-shadow: inset 4px 2px 8px 1px map-get($colors, shadow);
+  color: map-get($colors, softwhite);
 }
 .softbrown-fr {
+  border-radius: 8px;
   padding: 1%;
   background-color: map-get($colors, softbrown);
   box-shadow: inset 4px 2px 8px 1px map-get($colors, shadow);
 }
 .softsand-fr {
+  border-radius: 8px;
   padding: 1%;
   background-color: map-get($colors, softsand);
   box-shadow: inset 4px 2px 8px 1px map-get($colors, shadow);
 }
 .softblue-fr {
+  border-radius: 8px;
   padding: 1%;
   background-color: map-get($colors, softblue);
   box-shadow: inset 4px 2px 8px 1px map-get($colors, shadow);
 }
 .softwhite-fr {
+  border-radius: 8px;
   padding: 1%;
   background-color: map-get($colors, softwhite);
   box-shadow: inset 4px 2px 8px 1px map-get($colors, shadow);
 }
-.rad {
-  border-radius: 20px;
+a::before {
+  content: "📌";
 }
+
 /* ===================CSS GRID for EXAMPLES ========================== */
 .grid-exA {
  display: grid;
@@ -56,11 +62,46 @@ box-shadow: inset 4px 2px 8px 1px map-get($colors, shadow);
  grid-auto-rows: 10vh;
  grid-gap: 1vh;
  border: 1px solid orange;
-}
-.grid-exA div{
-  background-color: map-get($colors, shadow);
-  padding: 0.2em;
+   div{
+     background-color: map-get($colors, shadow);
+     padding: 0.2em;
 
-  margin: 1%;
+     margin: 1%;
+     border: 1px solid map-get($colors, transGreen);
+   }
+}
+.grid-exB {
+ display: grid;
+ grid-template-columns: 2fr 1fr 500px;
+ grid-gap: 1vh;
+ border: 1px solid black;
+   div {
+     background-color: map-get($colors, softblue);
+     padding: 0.2em;
+     border: 1px solid map-get($colors, transGreen);
+   }
+}
+
+.grid-exC {
+ display: grid;
+ grid-template-columns: repeat(2, 1fr 3fr);
+ grid-gap: 1vh;
+ border: 1px solid black;
+   div {
+     background-color: map-get($colors, softblue);
+     padding: 0.2em;
+     border: 1px solid map-get($colors, transGreen);
+   }
+}
+.grid-exD {
+ display: grid;
+ grid-template-columns: 50px repeat(3, 3fr);
+ grid-template-rows: 50px repeat(2, 8vh);
+ grid-gap: 1vh;
+ border: 1px solid black;
+}
+div.grid-exD div {
+  background-color: map-get($colors, softblue);
+  padding: 0.2em;
   border: 1px solid map-get($colors, transGreen);
 }
