--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -17,3 +17,6 @@ footer {
   }
   padding: 1% auto 5% auto;
 }
+.grade-bg {
+  background: linear-gradient(transparent, rgba(63, 106, 150, 0.2));
+}
