--- a/scss/sass/sass.scss
+++ b/scss/sass/sass.scss
@@ -83,7 +83,7 @@ div.ctr-example1 {
   top: 50%;
   transform: translate(-50%, -50%);
 }
-.centering-entry {
+.burgundy-grey-fr {
   background: #371a1a;
   border: 1px solid map-get($colors, dkgrey);
 }
