--- a/master.css
+++ b/master.css
@@ -24,18 +24,18 @@ body {
   font-size: 1.2vw; }
   body .prettyprint {
     font-family: "Code Source Pro", monospace; }
-  body div.bg-image:before {
-    content: "";
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    z-index: -1;
-    display: block;
-    background-image: url("img/steelbg.jpg");
-    width: 100%;
-    height: 100%;
-    filter: contrast(175%) brightness(23%); }
+
+div.bg-image:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  display: block;
+  background-image: url("img/steelbg.jpg");
+  width: 100vw;
+  height: 100vh;
+  filter: contrast(175%) brightness(23%); }
 
 /* links */
 a:active,
@@ -344,7 +344,7 @@ a[ui-sref]:hover {
   border: 1px solid grey;
   background-color: rgba(47, 9, 15, 0.45); }
 
-.framed1 {
+.forest-red-fr {
   padding: 2%;
   font-size: 1.4vw;
   margin: auto;
@@ -370,7 +370,7 @@ pre {
   background-color: rgba(50, 179, 132, 0.78);
   padding: 2vh 2vw; }
 
-.framed4 {
+.slate-skyblue-fr {
   padding: 2%;
   margin: 1%;
   background-color: #37474e;
@@ -707,7 +707,7 @@ div.ctr-example1 {
   top: 50%;
   transform: translate(-50%, -50%); }
 
-.centering-entry {
+.burgundy-grey-fr {
   background: #371a1a;
   border: 1px solid #575757; }
 
