--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -448,6 +448,12 @@ a[ui-sref]:hover {
   color: map-get($colors, ltgrey);
 }
 
+.burgundy-grey-fr {
+  background: #371a1a;
+  padding: 1%;
+  border: 1px solid map-get($colors, dkgrey);
+  color: map-get($colors, softwhite);
+}
 
 .framed2 {
   // position: relative;
@@ -477,7 +483,7 @@ pre {
 .slate-skyblue-fr {
   font-family: map-get($fonts, Comfortaa);
     padding: 2%;
-    margin: 1%;
+    // margin: 1%;
     background-color: rgb(55, 71, 78);
     color: rgb(237, 153, 111);
     padding: auto, 10%;
