--- a/master.scss
+++ b/master.scss
@@ -12,6 +12,7 @@ $baseline: 1vw; // $baseline:
 $title-font: 40px Tahoma, Helvetica, Arial, Sans-Serif;
 $fonts: ( Comfort: ('Comfortaa', cursive), Cabin: ('Cabin', Sans-Serif), CodePro: ('Code Source Pro', monospace), TypeWriter: ('Special Elite', serif), Clean: ('Raleway', Sans-Serif), Thin: ('Roboto', Sans-Serif ));
 $colors: (
+tan: #857664,
 trans30: rgba(#808080, 0.35),
 mango:#ebb861,
 sand:#d0b588,
