js event entries in ecma view

--- a/scss/general/general.scss
+++ b/scss/general/general.scss
@@ -33,7 +33,7 @@ div.bg-image:before {
   top: 0;
   z-index: -1;
   display: block;
-  background-image: url('img/steelbg.jpg');
+  background-image: url('img/steelbg2.jpg');
   width: 100vw;
   height: 100vh;
   filter: contrast(175%) brightness(23%);
