--- a/master.scss
+++ b/master.scss
@@ -72,7 +72,7 @@ fuch: fuchsia);
 @import 'scss/general/general';
 @import 'scss/jq/jquery';
 @import 'scss/ecma/ecma';
-@import 'scss/misc/misc';
+@import 'scss/react/react';
 @import 'scss/sass/sass';
 @import 'scss/home/home';
 @import 'scss/angular/angular';
